--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,9 @@
 .container {
   width: 100%;
+  height: 75px;
   display: flex;
+  top: 0;
+  left: 0;
   justify-content: center;
   align-items: center;
   position: absolute;
@@ -9,11 +12,36 @@
 }
 
 .nav {
-  margin: 0.5rem 2rem;
+  color: #fff;
+  margin: 1rem 4rem;
   max-width: 1920px;
   width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav img {
   width: 75px;
+}
+
+.logoTitle img {
+  width: 125px;
+}
+
+.row {
+  font-size: 0.8rem;
+  display: flex;
+}
+
+.btn {
+  padding: 0.75rem 1.5rem;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: 0.25s ease-in-out;
+}
+
+.btn:hover {
+  background-color: #ffffff25;
+  backdrop-filter: blur(10px);
 }
