--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,19 @@
-@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 :root {
-  font-family: "Geist", sans-serif;
+  font-family: "Inter", sans-serif;
+}
+
+body {
+  background-color: #fafafa;
 }
 
 * {
   margin: 0;
   box-sizing: border-box;
+}
+
+section {
+  min-height: 100vh;
+  height: 100vh;
 }
