--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,58 +1,66 @@
-.section1 {
-  margin: auto;
-  height: 100vh;
-  background-color: #000;
-  display: grid;
-  place-items: center;
-}
-
-.infoBox {
-  z-index: 1;
-  display: flex;
-  gap: 1rem;
-  flex-direction: column;
-  align-items: center;
-}
-
-.infoBox h1 {
-  font-weight: 900;
-  font-size: 5rem;
-  color: #fff;
-}
-
-.boxImg {
+.mainImg {
+  position: relative;
   width: 100%;
   height: 100%;
-  background-color: #000;
-  display: flex;
-  position: relative;
-  display: grid;
-  place-items: center;
-  background-size: cover;
   background-position: center;
+  background-size: cover;
   background-image: url("Tesla_PW_SP_Suburban_Day_ Linkedin.jpg");
 }
 
-.boxImg::before {
+.mainImg::before {
   content: "";
   width: 100%;
   height: 100%;
   position: absolute;
-  background-color: #000000d0;
+  background: linear-gradient(#111111eb, #000000cb);
 }
 
-.about {
-  width: fit-content;
-  background-color: #ffffff15;
+.logo {
+  width: 200px;
+}
+
+.center {
+  z-index: 1;
+  width: 100%;
+  top: 0;
+  position: absolute;
+  height: 100%;
+  display: grid;
+  place-items: center;
+}
+
+.box {
+  max-width: 750px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.title {
   color: #fff;
-  padding: 0.5rem 1.5rem;
-  border-radius: 8px;
-  backdrop-filter: blur(10px);
-  border: 1px solid #e1e1e115;
-  transition: 0.5s ease-in-out;
+  font-weight: 600;
+  font-size: 4rem;
 }
 
-.about:hover {
+.aboutBtn {
+  width: fit-content;
   background-color: #ffffff25;
+  border: 1px solid #e1e1e125;
+  backdrop-filter: blur(10px);
+  padding: 1rem 2rem;
+  color: #fff;
+  border-radius: 8px;
+  font-weight: 500;
   cursor: pointer;
+  transition: 0.25s ease-in-out;
+}
+
+.aboutBtn:hover {
+  background-color: #ffffff35;
+}
+
+.product {
+  width: 300px;
 }
