--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -4,16 +4,18 @@
   display: flex;
   top: 0;
   left: 0;
+  position: fixed;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  background-color: #111827e0;
+  backdrop-filter: blur(10px);
   top: 0;
   z-index: 10;
 }
 
 .nav {
   color: #fff;
-  margin: 1rem 4rem;
+  margin: 2rem 2rem;
   max-width: 1920px;
   width: 100%;
   display: flex;
@@ -35,13 +37,9 @@
 }
 
 .btn {
-  padding: 0.75rem 1.5rem;
+  padding: 0.5rem 1rem;
   border-radius: 8px;
+  color: #ffffffe0;
+  font-size: 1rem;
   cursor: pointer;
-  transition: 0.25s ease-in-out;
-}
-
-.btn:hover {
-  background-color: #ffffff25;
-  backdrop-filter: blur(10px);
 }
