--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,66 +1,89 @@
-.mainImg {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  background-image: url("Tesla_PW_SP_Suburban_Day_ Linkedin.jpg");
-}
-
-.mainImg::before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background: linear-gradient(#111111eb, #000000cb);
-}
-
-.logo {
-  width: 200px;
-}
-
 .center {
-  z-index: 1;
   width: 100%;
-  top: 0;
-  position: absolute;
   height: 100%;
   display: grid;
   place-items: center;
 }
 
 .box {
-  max-width: 750px;
+  max-width: 900px;
+  text-align: center;
   display: flex;
   flex-direction: column;
-  text-align: center;
-  align-items: center;
   gap: 2rem;
+  align-items: center;
 }
 
 .title {
+  font-size: 5rem;
   color: #fff;
-  font-weight: 600;
-  font-size: 4rem;
+  font-weight: 700;
 }
 
 .aboutBtn {
   width: fit-content;
   background-color: #ffffff25;
-  border: 1px solid #e1e1e125;
-  backdrop-filter: blur(10px);
-  padding: 1rem 2rem;
+  padding: 0.75rem 1.5rem;
   color: #fff;
-  border-radius: 8px;
-  font-weight: 500;
+  border-radius: 50px;
+  font-size: 1rem;
   cursor: pointer;
-  transition: 0.25s ease-in-out;
 }
 
-.aboutBtn:hover {
-  background-color: #ffffff35;
+.secondSection {
+  height: 100%;
 }
 
-.product {
-  width: 300px;
+.photoRow {
+  padding: 10rem;
+  display: grid;
+  grid-template-columns: 1fr 0.15fr 1fr;
+  gap: 0.5fr;
+}
+
+.photoFrame {
+  position: relative;
+  overflow: hidden;
+  aspect-ratio: 1 / 1;
+  flex: 1;
+  border-radius: 12px 12px 0 0;
+}
+
+.photoFrame img {
+  object-fit: cover;
+  object-position: center;
+  height: 100%;
+  width: 100%;
+}
+
+.photoFrame::before {
+  position: absolute;
+  top: 0;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(#11182700, #11182780, #111827);
+}
+
+.columnPhoto {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.photoTitle {
+  font-size: 3rem;
+  color: #fff;
+  font-weight: 700;
+}
+
+.photoDesc {
+  color: #b3b3b3;
+  font-size: 1.1rem;
+  line-height: 1.5;
+}
+
+.learnMore {
+  color: #4ade80;
 }
