--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -4,17 +4,14 @@
   display: flex;
   top: 0;
   left: 0;
-  position: fixed;
+  position: absolute;
   justify-content: center;
   align-items: center;
-  background-color: #111827e0;
-  backdrop-filter: blur(10px);
   top: 0;
   z-index: 10;
 }
 
 .nav {
-  color: #fff;
   margin: 2rem 2rem;
   max-width: 1920px;
   width: 100%;
@@ -37,9 +34,17 @@
 }
 
 .btn {
-  padding: 0.5rem 1rem;
+  padding: 0.75rem 1.5rem;
   border-radius: 8px;
-  color: #ffffffe0;
+  color: #b4b4b4;
   font-size: 1rem;
+  font-weight: 500;
   cursor: pointer;
+  transition: 0.12s ease-in-out;
+}
+
+.btn:hover {
+  color: #fafafa;
+  background-color: #ffffff15;
+  backdrop-filter: blur(10px);
 }
