--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 :root {
-  font-family: "Inter", sans-serif;
+  font-family: "Geist", sans-serif;
 }
 
 body {
-  background-color: #111827;
+  background-color: #050505;
 }
 
 * {
@@ -18,5 +18,4 @@ section {
   max-width: 1920px;
   position: relative;
   min-height: 100vh;
-  height: 100vh;
 }
