--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,95 +1,228 @@
+.section1 {
+  position: relative;
+}
+
 .center {
+  position: absolute;
   width: 100%;
   height: 100%;
   display: grid;
-  place-items: center;
+  justify-content: center;
+  z-index: 1;
 }
 
 .box {
-  max-width: 900px;
+  margin-top: 20%;
+  max-width: 1000px;
+  display: flex;
+  gap: 2rem;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
+}
+
+.titleTransparent {
+  font-weight: 100;
+  color: #fff;
+  font-size: 5rem;
+  line-height: 1.1;
+}
+
+.videoContent {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+}
+
+.videoContent::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(#05050592, #050505);
+}
+
+.videoContent video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.btnMais {
+  background-color: #ffffff15;
+  border: 1px solid #ffffff1e;
+  backdrop-filter: blur(10px);
+  padding: 0.75rem 1.5rem;
+  color: #fff;
+  font-weight: 500;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.12s ease-in-out, box-shadow 0.12s ease-in-out;
+}
+
+.btnMais:hover {
+  background-color: #ffffff25;
+  box-shadow: 0px 0px 30px 6px #ffffff15;
+}
+
+.gridTemplate {
+  padding: 2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10%;
+}
+
+.sectionProducts {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  align-items: center;
 }
 
-.title {
-  font-size: 5rem;
-  color: #fff;
-  font-weight: 700;
-}
-
-.aboutBtn {
-  width: fit-content;
-  background-color: #ffffff25;
-  padding: 0.75rem 1.5rem;
-  color: #fff;
-  border-radius: 50px;
-  font-size: 1rem;
-  cursor: pointer;
-}
-
-.secondSection {
-  height: 100%;
-}
-
-.photoRow {
-  padding: 10rem;
-  display: grid;
-  grid-template-columns: 1fr 0.15fr 1fr;
-  gap: 0.5fr;
-}
-
-.photoFrame {
-  position: relative;
+.photo {
+  scale: 0.8;
+  width: 100%;
+  border-radius: 12px;
   overflow: hidden;
   aspect-ratio: 1 / 1;
-  flex: 1;
-  border-radius: 12px 12px 0 0;
 }
 
-.photoFrame img {
-  object-fit: cover;
-  object-position: center;
-  height: 100%;
-  width: 100%;
-}
-
-.photoFrame::before {
-  position: absolute;
-  top: 0;
-  content: "";
+.photo img {
   width: 100%;
   height: 100%;
-  background: linear-gradient(
-    transparent,
-    transparent,
-    transparent,
-    #111827d3,
-    #111827
-  );
 }
 
-.columnPhoto {
+.columnDesc {
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 1rem;
 }
 
-.photoTitle {
-  font-size: 3rem;
+.productTitle {
   color: #fff;
-  font-weight: 700;
+  font-size: 2.5rem;
+  font-weight: 600;
+  width: fit-content;
+  border-bottom: 2px solid #00ff1ec6;
 }
 
-.photoDesc {
-  color: #b3b3b3;
+.productDesc {
   font-size: 1.1rem;
+  color: #b1b1b1;
+  line-height: 1.6;
+}
+
+.aboutBtn {
+  margin-top: 2rem;
+  color: #d1d1d1;
+  width: fit-content;
+  padding: 0.75rem 1.5rem;
+  display: flex;
+  gap: 1rem;
+  background-color: #ffffff15;
+  border-radius: 6px;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 0.12s ease-in-out, color 0.12s ease-in-out;
+}
+
+.aboutBtn:hover .arrow {
+  opacity: 1;
+}
+.aboutBtn:hover {
+  color: #fff;
+  background-color: #ffffff25;
+}
+
+.arrow {
+  opacity: 0.5;
+  transition: opacity 0.12s ease-in-out;
+}
+
+.infoCards {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+
+.boxCards {
+  border: 1px solid #1e1e1e;
+  padding: 2rem;
+  border-radius: 8px;
+}
+
+.boxCards img {
+  width: 300px;
+}
+
+.certification {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  text-align: center;
+}
+
+.certTitle {
+  font-weight: 600;
+  font-size: 3rem;
+  color: #fff;
+}
+
+.certDesc {
+  max-width: 50%;
+  color: #a7a7a7;
+  font-size: 1.2rem;
   line-height: 1.5;
 }
 
-.learnMore {
-  color: #4ade80;
+.certBox {
+  margin-top: 3rem;
+  width: 400px;
+  padding: 2rem;
+  border: 1px solid #2a2a2a;
+  border-radius: 8px;
+}
+
+.certBox img {
+  width: 100%;
+}
+
+.divide {
+  padding: 2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10%;
+}
+
+.sectionColumn {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.sectionTitle {
+  color: #fff;
+  font-weight: 600;
+  font-size: 3.5rem;
+}
+
+.sectionTitle span {
+  color: #aeaeae;
+}
+
+.sectionDesc1 {
+  color: #e1e1e1;
+  font-size: 1.2rem;
+}
+
+.sectionDesc2 {
+  color: #9d9d9d;
+  font-size: 1.2rem;
+  line-height: 1.5;
 }
