--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -21,11 +21,7 @@
 }
 
 .nav img {
-  width: 75px;
-}
-
-.logoTitle img {
-  width: 125px;
+  width: 150px;
 }
 
 .row {
@@ -47,4 +43,21 @@
   color: #fafafa;
   background-color: #ffffff15;
   backdrop-filter: blur(10px);
+}
+
+.hamburguer {
+  display: none;
+}
+
+.iconHamburguer {
+  color: #fff;
+}
+
+@media only screen and (max-width: 700px) {
+  .row {
+    display: none;
+  }
+  .hamburguer {
+    display: block;
+  }
 }
