--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -13,7 +13,7 @@
 }
 
 .box {
-  max-width: 1000px;
+  width: min(1920px, 100% - 2rem);
   display: flex;
   gap: 2rem;
   flex-direction: column;
@@ -24,8 +24,7 @@
 .titleTransparent {
   font-weight: 100;
   color: #fff;
-  font-size: 5rem;
-  line-height: 1.1;
+  font-size: var(--main-title);
 }
 
 .videoContent {
@@ -55,7 +54,8 @@
   background-color: #ffffff15;
   border: 1px solid #ffffff1e;
   backdrop-filter: blur(10px);
-  padding: 0.75rem 1.5rem;
+  padding: var(--padding-btn);
+  font-size: var(--font-size-btn);
   color: #fff;
   font-weight: 500;
   border-radius: 6px;
@@ -69,7 +69,8 @@
 }
 
 .gridTemplate {
-  padding: 2rem;
+  width: min(1920px, 100% - 2rem);
+  margin: auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 10%;
@@ -78,7 +79,7 @@
 .sectionProducts {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 10rem;
 }
 
 .photo {
@@ -112,23 +113,23 @@
 
 .productTitle {
   color: #fff;
-  font-size: 2.5rem;
+  font-size: var(--sub-title);
   font-weight: 600;
   width: fit-content;
   border-bottom: 2px solid #00ff1ec6;
 }
 
 .productDesc {
-  font-size: 1.1rem;
+  font-size: var(--font-size);
   color: #b1b1b1;
   line-height: 1.6;
 }
 
 .aboutBtn {
-  margin-top: 2rem;
   color: #d1d1d1;
   width: fit-content;
-  padding: 0.75rem 1.5rem;
+  padding: var(--padding-btn);
+  font-size: var(--font-size-btn);
   display: flex;
   gap: 1rem;
   background-color: #ffffff15;
@@ -168,41 +169,8 @@
   width: 300px;
 }
 
-.certification {
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-  text-align: center;
-}
-
-.certTitle {
-  font-weight: 600;
-  font-size: 3rem;
-  color: #fff;
-}
-
-.certDesc {
-  max-width: 50%;
-  color: #a7a7a7;
-  font-size: 1.2rem;
-  line-height: 1.5;
-}
-
-.certBox {
-  margin-top: 3rem;
-  width: 400px;
-  padding: 2rem;
-  border: 1px solid #2a2a2a;
-  border-radius: 8px;
-}
-
-.certBox img {
-  width: 100%;
-}
-
 .divide {
+  margin-top: 5rem;
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -210,7 +178,7 @@
 
 .sectionColumn {
   margin: auto;
-  max-width: 750px;
+  width: min(1000px, 100% - 2rem);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -221,7 +189,7 @@
 .sectionTitle {
   color: #fff;
   font-weight: 600;
-  font-size: 3.5rem;
+  font-size: var(--sub-title);
 }
 
 .sectionTitle span {
@@ -230,39 +198,44 @@
 
 .sectionDesc1 {
   color: #e1e1e1;
-  font-size: 1.2rem;
+  font-size: var(--font-size);
 }
 
 .sectionDesc2 {
   color: #9d9d9d;
-  font-size: 1.2rem;
+  font-size: var(--font-size);
   line-height: 1.5;
 }
 
 .columnSection2 {
   margin-top: 5rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  gap: 1rem;
-}
-
-.cardSection {
-  padding: 2rem 1rem;
-  border-radius: 8px;
-  background-color: #1e1e1e;
-  color: #fff;
-  text-align: center;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   gap: 1rem;
+  flex-wrap: wrap;
 }
 
-@media only screen and (max-width: 700px) {
-  .titleTransparent {
-    font-size: 2rem;
+.proposal {
+  margin-top: 3rem;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: var(--padding-btn);
+  font-weight: 500;
+  font-size: var(--font-size-btn);
+  cursor: pointer;
+  transition: box-shadow 0.1s ease-in-out;
+}
+
+.proposal:hover {
+  box-shadow: 0px 0px 30px 1px #fff;
+}
+
+@media only screen and (max-width: 750px) {
+  .gridTemplate {
+    grid-template-columns: 1fr;
   }
-  .btnMais {
-    font-size: 0.75rem;
+
+  .columnDesc {
+    grid-row-start: 1;
+    grid-row-start: 2;
   }
 }
