--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -69,7 +69,7 @@
 }
 
 .gridTemplate {
-  width: min(1920px, 100% - 2rem);
+  width: min(1440px, 100% - 6rem);
   margin: auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -77,13 +77,13 @@
 }
 
 .sectionProducts {
+  margin-top: 5rem;
   display: flex;
   flex-direction: column;
-  gap: 10rem;
+  gap: 5rem;
 }
 
 .photo {
-  scale: 1;
   width: 100%;
   border-radius: 12px;
   overflow: hidden;
@@ -94,7 +94,7 @@
 .photo::before {
   content: "";
   position: absolute;
-  background: linear-gradient(transparent, #000);
+  background: linear-gradient(transparent, #050505);
   width: 100%;
   height: 100%;
 }
