--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,20 +1,23 @@
 .container {
   background-color: #000;
-  padding: 4rem;
   width: 100%;
   font-size: var(--footer-size);
   border-top: 1px solid #1e1e1e;
 }
 
 .grid {
+  padding: 2rem 0;
+  margin: auto;
+  width: min(1440px, 100% - 2rem);
   display: grid;
+  gap: 2rem;
   grid-template-columns: 1fr 1fr 1fr;
 }
 
 .column {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .column img {
@@ -56,4 +59,15 @@
   display: grid;
   place-items: center;
   border-radius: 6px;
+}
+
+@media only screen and (max-width: 750px) {
+  .grid {
+    grid-template-columns: 1fr;
+    text-align: center;
+    justify-content: center;
+  }
+  .column {
+    align-items: center;
+  }
 }
