--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -69,7 +69,7 @@
 }
 
 .gridTemplate {
-  width: min(1440px, 100% - 6rem);
+  width: min(1440px, 100% - 2rem);
   margin: auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -226,7 +226,68 @@
 }
 
 .proposal:hover {
-  box-shadow: 0px 0px 30px 1px #fff;
+  box-shadow: 0px 0px 30px 1px #ffffff61;
+}
+
+.columnCert {
+  margin: auto;
+  width: min(1440px, 100% - 2rem);
+  margin-top: 10rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  text-align: center;
+}
+
+.certTitle {
+  font-size: var(--sub-title);
+  color: #fff;
+}
+
+.certSubTitle {
+  color: #9d9d9d;
+  font-size: var(--font-size);
+  line-height: 1.5;
+  margin-bottom: 3rem;
+}
+
+.cardCert {
+  background-color: #0f0f0f;
+  border: 1px solid #1e1e1e;
+  padding: 2rem;
+  border-radius: 12px;
+  width: min(350px, 100%);
+  display: grid;
+  place-items: center;
+  margin-bottom: 5rem;
+}
+
+.cardCert img {
+  width: 100%;
+  height: 100%;
+}
+
+.certVideo {
+  margin: auto;
+  width: min(1440px, 100% - 2rem);
+  position: relative;
+  height: 500px;
+}
+
+.certVideo::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(#00000000, #050505);
+}
+
+.certVideo video {
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 @media only screen and (max-width: 750px) {
