--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -85,7 +85,7 @@
 
 .photo {
   width: 100%;
-  border-radius: 12px;
+
   overflow: hidden;
   aspect-ratio: 1 / 1;
   position: relative;
@@ -100,6 +100,7 @@
 }
 
 .photo img {
+  border-radius: 12px 12px 0 0;
   width: 100%;
   height: 100%;
 }
